Fix z-index -- tree popovers should not cover modals :)

--- a/portfolio-webapp/src/TreeView.sass
+++ b/portfolio-webapp/src/TreeView.sass
@@ -161,7 +161,7 @@ $spacer : 0.5em
   min-height: 70px
   max-height: 600px
   overflow-y: auto
-  z-index: 50
+  z-index: 20
 
 
 .treePopover .close-popup
